ifcc-test-output/testfiles-11_invalid_duplicate_declaration/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:9: error: redefinition of ‘a’
    3 |     int a=2;
      |         ^
input.c:2:9: note: previous definition of ‘a’ with type ‘int’
    2 |     int a=1;
      |         ^

exit status: 1
